feat: Add and improve tests for program copying [DHIS2-15279]